# crewai-demo

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: sample.txt
src/demo/: agents.py  app.py  runner.py  tasks.py  tools.py  vectorstore.py
