[project]
name = "crewai-demo"
version = "0.1.0"
description = ""
authors = [{ name = "yukaty" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "crewai (==1.8.1)",
    "langchain-openai (==0.3.23)",
    "langchain-community (==0.3.31)",
    "streamlit (==1.53.1)",
    "faiss-cpu (==1.13.2)",
]

[tool.poetry]
packages = [{ include = "demo", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
